# config

./: README.md  pyproject.toml
examples/: 01_hello.py  02_paths.py  03_env.py  04_cli.py  05_watch.py
